Updated JS Libraries.

--- a/_includes/tail.html
+++ b/_includes/tail.html
@@ -6,7 +6,7 @@
 <!-- Bootstrap -->
 <script src="https://cdn.jsdelivr.net/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha256-U5ZEeKfGNOja007MMD3YBI0A3OSZOQbeG6z2f2Y0hu8=" crossorigin="anonymous"></script>
 <!-- MomentJS -->
-<script src="https://cdn.jsdelivr.net/momentjs/2.18.1/moment.min.js" integrity="sha256-1hjUhpc44NwiNg8OwMu2QzJXhD8kcj+sJA3aCQZoUjg=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/moment@2.22.2/moment.min.js"></script>
 <!-- Jquery Match Height -->
 <script src="https://cdn.jsdelivr.net/npm/jquery-match-height@latest/dist/jquery.matchHeight-min.js"></script>
 
@@ -30,7 +30,7 @@
 <!-- Adds upcomingEvents script to pages. -->
 {% if page.calendar %}
   {% asset calendar.js %}
-  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@3.8.0/dist/fullcalendar.min.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@3.8.0/dist/fullcalendar.min.css" crossorigin="anonymous" />
-  <link rel="stylesheet" media="print" href="https://cdn.jsdelivr.net/npm/fullcalendar@3.8.0/dist/fullcalendar.print.min.css" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@3.9.0/dist/fullcalendar.min.js" integrity="sha256-QvhPq+evNjd8JyxSOU5KL3jPYTD7+gWVev1OH763SL0=" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@3.9.0/dist/fullcalendar.min.css" integrity="sha256-Tu3DN+5kwrhzlzhNUMuGht2h7cR6ARgKcYemB9u5SzA=" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@3.9.0/dist/fullcalendar.print.min.css" integrity="sha256-wrdOlXzdxeFmQyeCnv1suX42fhtiEBrcKg1IY2cAwiI=" crossorigin="anonymous">
 {% endif %}
