--- a/_sass/_global.sass
+++ b/_sass/_global.sass
@@ -62,3 +62,9 @@ body
     &:hover
       color: #337ab7
       text-decoration: underline
+
+.img-center-text
+  position: absolute
+  top: 50%
+  left: 50%
+  transform: translate(-50%, -50%)
